--- a/package.json
+++ b/package.json
@@ -1,28 +1,20 @@
 {
   "name": "flyde-vscode",
-  "displayName": "Bob",
-  "description": "Bob",
+  "displayName": "Flyde",
+  "description": "Flyde editor for VSCode",
   "version": "0.0.1",
-  "installConfig": {
-    "hoistingLimits": "dependencies"
-  },
   "engines": {
     "vscode": "^1.69.0"
   },
+  "repository": "https://github.com/flyde",
   "categories": [
     "Other"
   ],
   "activationEvents": [
-    "*"
+    "onCustomEditor:flydeEditor"
   ],
-  "main": "./dist/extension.js",
+  "main": "./out/extension.js",
   "contributes": {
-    "commands": [
-      {
-        "command": "flyde-vscode.helloWorld",
-        "title": "Hello World"
-      }
-    ],
     "customEditors": [
       {
         "viewType": "flydeEditor",
@@ -53,10 +45,11 @@
     ]
   },
   "scripts": {
-    "vscode:prepublish": "yarn run package",
-    "compile": "webpack",
-    "watch": "webpack --watch",
-    "package": "webpack --mode production --devtool hidden-source-map",
+    "vscode:prepublish": "yarn run compile && yarn run copy-editor",
+    "compile": "tsc -p ./",
+    "build": "yarn run compile",
+    "copy-editor": "node copy-editor.js",
+    "watch": "tsc -watch -p ./",
     "compile-tests": "tsc -p . --outDir out",
     "watch-tests": "tsc -p . -w --outDir out",
     "pretest": "yarn run compile-tests && yarn run compile && yarn run lint",
@@ -72,16 +65,15 @@
     "@typescript-eslint/parser": "^5.30.0",
     "@vscode/test-electron": "^2.1.5",
     "eslint": "^8.18.0",
+    "fs-extra": "^10.1.0",
     "glob": "^8.0.3",
     "mocha": "^10.0.0",
-    "ts-loader": "^9.3.1",
-    "typescript": "^4.7.4",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0"
+    "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@flyde/core": "workspace:^",
-    "@flyde/dev-server": "workspace:^",
+    "@flyde/dev-server": "^1.0.9",
+    "@flyde/editor": "^1.0.5",
+    "@types/react": "^17.0.0",
     "execa": "^6.1.0",
     "find-free-port": "^2.0.0"
   }
