--- a/package.json
+++ b/package.json
@@ -79,10 +79,12 @@
   },
   "scripts": {
     "vscode:prepublish": "yarn run build",
+    "build-editor": "cd ../flyde/editor && yarn build && cd ../../flyde-vscode",
+    "link-all": "npm link @flyde/dev-server && npm link @flyde/editor && npm link @flyde/flow-editor && npm link @flyde/runtime && npm link @flyde/core",
     "compile": "tsc -p ./",
-    "build": "yarn run compile && yarn run copy-editor",
+    "build": "yarn run compile && yarn build-editor && yarn run copy-editor",
     "copy-editor": "node copy-editor.js",
-    "watch": "tsc -watch -p ./",
+    "dev": "tsc -watch -p ./",
     "compile-tests": "tsc -p . --outDir out",
     "watch-tests": "tsc -p . -w --outDir out",
     "pretest": "yarn run compile-tests && yarn run compile && yarn run lint",
@@ -104,10 +106,15 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@flyde/core": "^1.0.3",
     "@flyde/dev-server": "^1.0.9",
     "@flyde/editor": "^1.0.7",
+    "@flyde/flow-editor": "^1.0.4",
+    "@flyde/runtime": "^1.0.1",
     "@types/react": "^17.0.0",
+    "cuid": "^2.1.8",
     "execa": "^6.1.0",
-    "find-free-port": "^2.0.0"
+    "find-free-port": "^2.0.0",
+    "resolve-from": "^5.0.0"
   }
 }
