--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "flyde-vscode",
   "displayName": "Flyde",
   "description": "Flyde editor for VSCode",
-  "version": "0.0.4",
+  "version": "0.1.0",
   "publisher": "flyde",
   "engines": {
     "vscode": "^1.69.0"
@@ -16,6 +16,21 @@
     "onCustomEditor:flydeEditor",
     "onCommand: flyde.newFlow"
   ],
+  "scripts": {
+    "vscode:prepublish": "yarn run build",
+    "copy-editor": "mkdir -p editor-build && cp -r ../flyde/editor/build/ editor-build/.",
+    "build-editor": "cd ../flyde/editor && yarn build && cd ../../flyde-vscode",
+    "link-all": "npm link @flyde/dev-server && npm link @flyde/editor && npm link @flyde/flow-editor && npm link @flyde/runtime && npm link @flyde/core",
+    "compile": "tsc -p ./",
+    "build": "yarn run compile && yarn build-editor && yarn run copy-editor",
+    "dev": "tsc -watch -p ./",
+    "compile-tests": "tsc -p . --outDir out",
+    "watch-tests": "tsc -p . -w --outDir out",
+    "pretest": "yarn run compile-tests && yarn run compile && yarn run lint",
+    "lint": "eslint src --ext ts",
+    "test": "node ./out/test/runTest.js",
+    "release": "vsce package && vsce publish minor"
+  },
   "main": "./out/extension.js",
   "contributes": {
     "customEditors": [
@@ -77,20 +92,7 @@
       ]
     }
   },
-  "scripts": {
-    "vscode:prepublish": "yarn run build",
-    "build-editor": "cd ../flyde/editor && yarn build && cd ../../flyde-vscode",
-    "link-all": "npm link @flyde/dev-server && npm link @flyde/editor && npm link @flyde/flow-editor && npm link @flyde/runtime && npm link @flyde/core",
-    "compile": "tsc -p ./",
-    "build": "yarn run compile && yarn build-editor && yarn run copy-editor",
-    "copy-editor": "node copy-editor.js",
-    "dev": "tsc -watch -p ./",
-    "compile-tests": "tsc -p . --outDir out",
-    "watch-tests": "tsc -p . -w --outDir out",
-    "pretest": "yarn run compile-tests && yarn run compile && yarn run lint",
-    "lint": "eslint src --ext ts",
-    "test": "node ./out/test/runTest.js"
-  },
+  
   "devDependencies": {
     "@types/glob": "^7.2.0",
     "@types/mocha": "^9.1.1",
@@ -112,6 +114,7 @@
     "@flyde/flow-editor": "^1.0.4",
     "@flyde/runtime": "^1.0.1",
     "@types/react": "^17.0.0",
+    "callsite": "^1.0.0",
     "cuid": "^2.1.8",
     "execa": "^6.1.0",
     "find-free-port": "^2.0.0",
