--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,6 +21,21 @@
 			}
 		},
 		{
+			"name": "Run Extension (prod mode)",
+			"type": "extensionHost",
+			"request": "launch",
+			"args": [
+				"--extensionDevelopmentPath=${workspaceFolder}"
+			],
+			"outFiles": [
+				"${workspaceFolder}/out/**/*.js"
+			],
+			"preLaunchTask": "${defaultBuildTask}",
+			"env": {
+				"MODE": "prod"
+			}
+		},
+		{
 			"name": "Extension Tests",
 			"type": "extensionHost",
 			"request": "launch",
