--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
           "flyde"
         ],
         "icon": {
-          "light": "./fileicons/flyde_vscode_dark.svg",
-          "dark": "./fileicons/flyde_vscode_dark.svg"
+          "light": "./fileicons/icon.svg",
+          "dark": "./fileicons/icon.svg"
         }
       }
     ],
