--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "vscode:prepublish": "yarn run build",
     "copy-editor": "mkdir -p editor-build && cp -r ../flyde/editor/build/ editor-build/.",
     "build-editor": "cd ../flyde/editor && yarn build && cd ../../flyde-vscode",
-    "link-all": "npm link @flyde/core && npm link @flyde/resolver && npm link @flyde/dev-server && npm link @flyde/editor && npm link @flyde/flow-editor && npm link @flyde/runtime",
+    "link-all": "npm link @flyde/core && npm link @flyde/resolver && npm link @flyde/dev-server && npm link @flyde/runtime",
     "compile": "tsc -p ./",
     "build": "yarn run compile && yarn build-editor && yarn run copy-editor",
     "watch": "tsc -watch -p ./",
@@ -122,12 +122,10 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@flyde/core": "^1.0.3",
-    "@flyde/dev-server": "^1.0.9",
-    "@flyde/editor": "^1.0.7",
-    "@flyde/flow-editor": "^1.0.4",
-    "@flyde/runtime": "^1.0.1",
-    "@flyde/resolver": "^1.0.0",
+    "@flyde/core": "^0.1.0",
+    "@flyde/dev-server": "^0.1.0",
+    "@flyde/runtime": "^0.1.0",
+    "@flyde/resolver": "^0.1.0",
     "@types/react": "^17.0.0",
     "callsite": "^1.0.0",
     "cuid": "^2.1.8",
