--- a/package.json
+++ b/package.json
@@ -108,9 +108,9 @@
     }
   },
   "devDependencies": {
-    "@types/glob": "^7.2.0",
-    "@types/mocha": "^9.1.1",
-    "@types/node": "16.x",
+    "@types/glob": "^8.0.0",
+    "@types/mocha": "^10.0.0",
+    "@types/node": "18.11.9",
     "@types/vscode": "^1.69.0",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
@@ -124,10 +124,10 @@
   "dependencies": {
     "@flyde/core": "^0.1.0",
     "@flyde/dev-server": "^0.2.0",
-    "@flyde/resolver": "^0.1.0",
-    "@flyde/runtime": "^0.1.0",
+    "@flyde/resolver": "^0.3.3",
+    "@flyde/runtime": "^0.2.2",
     "@tsconfig/node16": "^1.0.3",
-    "@types/react": "^17.0.0",
+    "@types/react": "^18.0.25",
     "callsite": "^1.0.0",
     "cuid": "^2.1.8",
     "execa": "^6.1.0",
