--- a/package.json
+++ b/package.json
@@ -18,20 +18,20 @@
     "onCommand:flyde.newCodeFlow"
   ],
   "scripts": {
-    "vscode:prepublish": "yarn run build",
+    "vscode:prepublish": "npm run build",
     "copy-editor": "mkdir -p editor-build && cp -r ../flyde/editor/build/ editor-build/.",
-    "build-editor": "cd ../flyde/editor && yarn build && cd ../../flyde-vscode",
-    "link-all": "npm link @flyde/core && npm link @flyde/resolver && npm link @flyde/dev-server && npm link @flyde/runtime && npm link @flyde/remote-debugger",
+    "build-editor": "cd ../flyde/editor && npm run build && cd ../../flyde-vscode",
+    "link-all": "npm link @flyde/core @flyde/resolver @flyde/dev-server @flyde/runtime @flyde/remote-debugger",
     "compile": "tsc -p ./",
-    "build": "yarn run compile && yarn build-editor && yarn run copy-editor",
+    "build": "npm run compile && npm run build-editor && npm run copy-editor",
     "watch": "tsc -watch -p ./",
-    "dev": "yarn watch",
+    "dev": "npm watch",
     "compile-tests": "tsc -p . --outDir out",
     "watch-tests": "tsc -p . -w --outDir out",
-    "pretest": "yarn run compile-tests && yarn run compile && yarn run lint",
+    "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
     "test": "node ./out/test/runTest.js",
-    "release": "vsce package && vsce publish minor"
+    "release": "vsce package --no-yarn && vsce publish minor"
   },
   "main": "./out/extension.js",
   "contributes": {
@@ -122,10 +122,10 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@flyde/core": "^0.1.7",
-    "@flyde/dev-server": "^0.4.2",
-    "@flyde/resolver": "^0.3.6",
-    "@flyde/runtime": "^0.4.2",
+    "@flyde/core": "^0.1.11",
+    "@flyde/dev-server": "^0.4.7",
+    "@flyde/resolver": "^0.3.11",
+    "@flyde/runtime": "^0.4.6",
     "@tsconfig/node16": "^1.0.3",
     "@types/react": "^18.0.25",
     "callsite": "^1.0.0",
@@ -133,5 +133,6 @@
     "execa": "^6.1.0",
     "find-free-port": "^2.0.0",
     "resolve-from": "^5.0.0"
-  }
+  },
+  "packageManager": "yarn@3.3.1"
 }
