--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "@flyde/runtime": "^0.4.6",
     "@tsconfig/node16": "^1.0.3",
     "@types/react": "^18.0.25",
+    "@vscode/extension-telemetry": "^0.7.5",
     "callsite": "^1.0.0",
     "cuid": "^2.1.8",
     "execa": "^6.1.0",
