--- a/package.json
+++ b/package.json
@@ -105,7 +105,51 @@
           "group": "flyde"
         }
       ]
-    }
+    },
+    "walkthroughs": [
+      {
+        "id": "quick-start",
+        "title": "Flyde Quick Start",
+        "description": "This walkthrough will help you get started with Flyde.",
+        "steps": [
+          {
+            "id": "install",
+            "title": "Install Flyde Extension",
+            "media": { "image": "media/walkthrough/icon.png", "altText": "Flyde icon" },
+            "description": "Install the Flyde extension from the marketplace",
+            "completionEvents": ["onExtensionInstalled:flyde-vscode"]
+          },
+          {
+            "id": "create-flow",
+            "title": "Create your first visual flow",
+            "description": "Create a new visual flow by opening the file explorer's context menu and selecting `New Visual Flow`. Or by using the command palette and selecting `Flyde: New Visual Flow`.",
+            "media": { "image": "media/walkthrough/new-flow.gif", "altText": "Create a new visual flow" },
+            "completionEvents": ["onCommand:flyde.newVisualFlow"]
+          },
+          {
+            "id": "open-flow",
+            "title": "Open your first visual flow",
+            "description": "Open a visual flow by double clicking on it in the file explorer.",
+            "media": { "markdown": "media/walkthrough/open-flow.md" },
+            "completionEvents": ["onContext:flyde.flowLoaded"]
+          },
+          {
+            "id": "run-flow",
+            "title": "Run flow",
+            "description": "Run your flow by clicking on the `Run` button in the right actions bar.",
+            "media": { "image": "media/walkthrough/run-flow.gif", "altText": "Run a flow"},
+            "completionEvents": ["onContext:flyde.ranFlow"]
+          },
+          {
+            "id": "learn-more",
+            "title": "Integrate Flyde into your project",
+            "description": "Learn more about how to integrate Flyde into your project by reading the [documentation](https://www.flyde.dev/docs/quick-start).",
+            "media": { "image": "media/walkthrough/icon.png", "altText": "Flyde icon" },
+            "completionEvents": ["onLink:https://www.flyde.dev/docs/quick-start"]
+          }
+        ]
+      }
+    ]
   },
   "devDependencies": {
     "@types/glob": "^8.0.0",
