--- a/package.json
+++ b/package.json
@@ -198,6 +198,7 @@
     "@types/react": "^18.0.25",
     "@vscode/extension-telemetry": "^0.7.5",
     "callsite": "^1.0.0",
+    "chalk": "^4.1.2",
     "cuid": "^2.1.8",
     "execa": "^6.1.0",
     "find-free-port": "^2.0.0",
