--- a/package.json
+++ b/package.json
@@ -29,10 +29,8 @@
   ],
   "scripts": {
     "vscode:prepackage": "npm run build",
-    "copy-editor": "mkdir -p editor-build && cp -r ../flyde/editor/build/ editor-build/.",
-    "build-editor": "cd ../flyde/editor && npm run build && cd ../../flyde-vscode",
-    "link-all": "npm link @flyde/core @flyde/resolver @flyde/dev-server @flyde/runtime @flyde/remote-debugger",
-    "update-all": "npm update @flyde/core @flyde/resolver @flyde/dev-server @flyde/runtime @flyde/remote-debugger",
+    "link-all": "npm link @flyde/core @flyde/resolver @flyde/dev-server @flyde/runtime @flyde/remote-debugger @flyde/editor",
+    "update-all": "npm update @flyde/core @flyde/resolver @flyde/dev-server @flyde/runtime @flyde/remote-debugger @flyde/editor",
     "compile": "tsc -p ./",
     "build": "npm run compile && npm run build-editor && npm run copy-editor",
     "watch": "tsc -watch -p ./",
@@ -203,11 +201,13 @@
   "dependencies": {
     "@flyde/core": "^0.1.11",
     "@flyde/dev-server": "^0.4.7",
+    "@flyde/editor": "^0.1.0",
     "@flyde/resolver": "^0.3.11",
     "@flyde/runtime": "^0.4.6",
     "@tsconfig/node16": "^1.0.3",
     "@types/react": "^18.0.25",
     "@vscode/extension-telemetry": "^0.7.5",
+    "@vscode/vsce": "^2.19.0",
     "callsite": "^1.0.0",
     "chalk": "^4.1.2",
     "cuid": "^2.1.8",
