--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Bump patch version
         run: |
-          npm version patch -m "Bump version to %s"
+          npm version minor -m "Bump version to %s"
           git push origin main
 
       - name: Package and publish extension
