--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies and update @flyde/* packages
         run: |
           npm ci
-          npm update --scope=@flyde
+          npm update --scope=@flyde\
 
       - name: Commit package.json if updated
         run: |
@@ -36,6 +36,8 @@ jobs:
 
       - name: Bump minor version
         run: |
+          git config --global user.name "GitHub Action"
+          git config --global user.email "action@github.com"
           npm version minor -m "Bump version to %s"
           git push origin main
 
