--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "link-all": "npm link @flyde/core @flyde/resolver @flyde/dev-server @flyde/runtime @flyde/remote-debugger @flyde/editor",
     "update-all": "npm update @flyde/core @flyde/resolver @flyde/dev-server @flyde/runtime @flyde/remote-debugger @flyde/editor",
     "compile": "tsc -p ./",
-    "build": "npm run compile && npm run build-editor && npm run copy-editor",
+    "copy-editor": "ts-node ./scripts/copy-editor.ts",
+    "build": "npm run compile && npm run copy-editor",
     "watch": "tsc -watch -p ./",
     "dev": "npm watch",
     "compile-tests": "tsc -p . --outDir out",
@@ -205,6 +206,7 @@
     "@flyde/resolver": "^0.3.11",
     "@flyde/runtime": "^0.4.6",
     "@tsconfig/node16": "^1.0.3",
+    "@types/fs-extra": "^11.0.1",
     "@types/react": "^18.0.25",
     "@vscode/extension-telemetry": "^0.7.5",
     "@vscode/vsce": "^2.19.0",
