--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,8 +25,8 @@ jobs:
 
       - name: Commit package.json if updated
         run: |
-          git config --global user.name "GitHub Action"
-          git config --global user.email "action@github.com"
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "github-actions@users.noreply.github.com"
           git add package.json package-lock.json
           git diff-index --quiet HEAD || git commit -m "Update @flyde/* packages"
           git push origin main
@@ -36,8 +36,8 @@ jobs:
 
       - name: Bump minor version
         run: |
-          git config --global user.name "GitHub Action"
-          git config --global user.email "action@github.com"
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "github-actions@users.noreply.github.com"
           npm version minor -m "Bump version to %s"
           git push origin main
 
