--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "dev": "npm watch",
     "compile-tests": "tsc -p . --outDir out",
     "watch-tests": "tsc -p . -w --outDir out",
-    "pretest": "npm run compile-tests && npm run compile && npm run lint",
+    "pretest": "npm run compile-tests && npm run build && npm run lint",
     "lint": "eslint src --ext ts",
     "test": "node ./out/test/runTest.js",
     "release": "vsce package --no-yarn && vsce publish minor"
