--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,6 +34,8 @@ jobs:
 
       - name: Build extension
         run: npm run build
+      - name: Test extension
+        run: npm run test
 
       - name: Bump minor version
         run: |
