--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   publish:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
       - name: Checkout repository
@@ -36,7 +36,7 @@ jobs:
         run: npm run build
 
       - name: Test extension
-        run: xvfb-run -a npm run test
+        run: npm run test
 
       - name: Bump minor version
         run: |
