Revert "adapt to part to node change (#7)"
This reverts commit 9c1181b6917030651d1370ac5ebaded114f9a3c3.

--- a/package.json
+++ b/package.json
@@ -189,7 +189,13 @@
     ],
     "configuration": {
       "title": "Flyde",
-      "properties": {}
+      "properties": {
+        "flyde.openAiToken": {
+          "type": "string",
+          "default": "",
+          "description": "OpenAI token for code part generation"
+        }
+      }
     }
   },
   "devDependencies": {
