--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "flyde-vscode",
+  "displayName": "Flyde",
   "description": "Flyde is an open-source, visual programming language. It runs in the IDE, integrates with existing TypeScript code, both browser and Node.js.",
   "version": "0.51.0",
   "publisher": "flyde",
